--- a/index.html
+++ b/index.html
@@ -3,55 +3,58 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Projeto Reciclagem - SENAI</title>
+  <title>Reciclagem de Latinhas - SENAI</title>
   <style>
+    :root {
+      --azul-senai: #0072bc;
+      --verde-senai: #1ab248;
+      --amarelo: #ffe600;
+    }
+
     body {
-      background: linear-gradient(135deg, #6b8dd6, #a3cef1);
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #fff;
       margin: 0;
-      padding: 0 20px;
+      padding: 0;
+      background: linear-gradient(135deg, var(--azul-senai), var(--verde-senai));
+      font-family: 'Segoe UI', Tahoma, sans-serif;
+      color: #fff;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       text-align: center;
     }
+
     h1 {
-      font-size: 3.2rem;
-      margin-bottom: 0.2em;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.3);
+      font-size: 2.8rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+      text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
     }
+
     #descricao {
-      font-size: 1.6rem;
-      margin-bottom: 0.5em;
-      font-weight: 600;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.25);
+      font-size: 1.5rem;
+      margin-bottom: 0.5rem;
     }
+
     #quantidade {
       font-size: 5rem;
-      font-weight: 900;
-      color: #ffd93b;
-      text-shadow: 3px 3px 6px rgba(0,0,0,0.4);
-      margin-bottom: 1em;
+      font-weight: bold;
+      color: var(--amarelo);
+      text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
     }
+
     footer {
-      margin-top: 2em;
+      margin-top: 2rem;
       font-size: 0.9rem;
-      color: #f0f0f0bb;
-      user-select: none;
+      color: #dff;
+      opacity: 0.8;
     }
+
     @media (max-width: 600px) {
-      h1 {
-        font-size: 2rem;
-      }
-      #descricao {
-        font-size: 1.2rem;
-      }
-      #quantidade {
-        font-size: 3.5rem;
-      }
+      h1 { font-size: 2rem; }
+      #descricao { font-size: 1.2rem; }
+      #quantidade { font-size: 3rem; }
     }
   </style>
 </head>
@@ -64,24 +67,22 @@
   <script>
     async function carregarQuantidade() {
       try {
-        // Adiciona timestamp para evitar cache
-        const urlCSV = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQDmEvEGRGjTk6mA3tZpLNL1dWXye4_ONIBX02eXx_eTxJkBQoFki4e9rCMBXRZ3lYoiJ-em89zVENE/pub?output=csv&t=" + new Date().getTime();
-        const resposta = await fetch(urlCSV);
+        const url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQDmEvEGRGjTk6mA3tZpLNL1dWXye4_ONIBX02eXx_eTxJkBQoFki4e9rCMBXRZ3lYoiJ-em89zVENE/pub?output=csv&t=" + new Date().getTime();
+        const resposta = await fetch(url);
         const texto = await resposta.text();
         const linhas = texto.trim().split("\n");
-        if (linhas.length < 2) throw new Error("CSV inválido");
-        const colunas = linhas[1].split(",");
-        if (colunas.length < 2) throw new Error("Formato do CSV errado");
-        const quantidade = colunas[1];
+        const valores = linhas[1].split(",");
+        const quantidade = valores[1].replace(/\r/g, ""); // remove caracteres invisíveis
         document.getElementById("quantidade").innerText = quantidade;
       } catch (erro) {
-        document.getElementById("quantidade").innerText = "Erro ao carregar dados";
-        console.error("Erro:", erro);
+        document.getElementById("quantidade").innerText = "Erro ao carregar";
+        console.error("Erro ao carregar CSV:", erro);
       }
     }
 
     carregarQuantidade();
-    setInterval(carregarQuantidade, 30000); // Atualiza a cada 30s
+    setInterval(carregarQuantidade, 30000); // atualiza a cada 30 segundos
   </script>
 </body>
 </html>
+
