--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -8,54 +7,117 @@
   <style>
     :root {
       --azul-senai: #0072bc;
-      --verde-senai: #1ab248;
       --amarelo: #ffe600;
+      --vermelho: #e63946;
+      --verde: #1ab248;
+      --fundo-claro: #f5f5f5;
     }
 
     body {
       margin: 0;
-      padding: 0;
-      background: linear-gradient(135deg, var(--azul-senai), var(--verde-senai));
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      color: #fff;
+      padding: 2rem;
+      font-family: Arial, sans-serif;
+      background: var(--fundo-claro);
+      color: var(--azul-senai);
+      text-align: center;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      text-align: center;
     }
 
     h1 {
       font-size: 2.8rem;
       font-weight: 700;
-      margin-bottom: 1rem;
-      text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
+      margin-bottom: 0.5rem;
+      color: var(--azul-senai);
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
     }
 
     #descricao {
-      font-size: 1.5rem;
-      margin-bottom: 0.5rem;
+      font-size: 2rem;
+      color: var(--azul-senai);
+      font-weight: 600;
+      margin-bottom: 0.3rem;
     }
 
     #quantidade {
       font-size: 5rem;
       font-weight: bold;
-      color: var(--amarelo);
-      text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+      margin-bottom: 1rem;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
     }
 
-    footer {
-      margin-top: 2rem;
-      font-size: 0.9rem;
-      color: #dff;
+    #info-atualizacao {
+      font-size: 1rem;
+      font-style: italic;
       opacity: 0.8;
+      max-width: 320px;
+      color: #444;
+      margin-bottom: 1rem;
+    }
+
+    #aviso-cache {
+      font-size: 0.9rem;
+      color: #666;
+      background: #fff3cd;
+      border: 1px solid #ffeeba;
+      padding: 10px;
+      border-radius: 5px;
+      max-width: 340px;
+    }
+
+    #indicadores {
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+      margin: 1.5rem 0 2rem 0;
+      flex-wrap: wrap;
+      max-width: 320px;
+    }
+
+    .quadrado {
+      width: 30px;
+      height: 30px;
+      border-radius: 4px;
+      box-shadow: 0 0 4px rgba(0,0,0,0.1);
+    }
+
+    .vermelho {
+      background-color: var(--vermelho);
+    }
+
+    .amarelo {
+      background-color: var(--amarelo);
+    }
+
+    .verde {
+      background-color: var(--verde);
+    }
+
+    .legenda {
+      color: var(--azul-senai);
+      font-weight: 600;
+      font-size: 0.9rem;
+      margin-top: 0.3rem;
+      text-align: center;
+      max-width: 70px;
     }
 
     @media (max-width: 600px) {
-      h1 { font-size: 2rem; }
-      #descricao { font-size: 1.2rem; }
-      #quantidade { font-size: 3rem; }
+      h1 {
+        font-size: 2rem;
+      }
+      #descricao {
+        font-size: 1.5rem;
+      }
+      #quantidade {
+        font-size: 3rem;
+      }
+      #info-atualizacao, #aviso-cache {
+        max-width: 90%;
+      }
     }
   </style>
 </head>
@@ -63,7 +125,30 @@
   <h1>Projeto Reciclagem de Latinhas - SENAI</h1>
   <div id="descricao">Quantidade de latinhas arrecadadas:</div>
   <div id="quantidade">Carregando...</div>
-  <footer>Atualizado automaticamente pela planilha</footer>
+
+  <div id="indicadores">
+    <div>
+      <div class="quadrado vermelho"></div>
+      <div class="legenda">Até 100</div>
+    </div>
+    <div>
+      <div class="quadrado amarelo"></div>
+      <div class="legenda">101 a 300</div>
+    </div>
+    <div>
+      <div class="quadrado verde"></div>
+      <div class="legenda">300+</div>
+    </div>
+  </div>
+
+  <div id="info-atualizacao">
+    A quantidade atualiza automaticamente a cada 30 segundos.
+  </div>
+
+  <div id="aviso-cache">
+    ⚠️ Pode levar alguns segundos ou minutos para que os dados atualizados da planilha apareçam aqui.  
+    Se o número parecer incorreto, aguarde um pouco e atualize a página.
+  </div>
 
   <script>
     async function carregarQuantidade() {
@@ -72,9 +157,20 @@
         const resposta = await fetch(url);
         const texto = await resposta.text();
         const linhas = texto.trim().split("\n");
-        const valores = linhas[1].split(",");
-        const quantidade = valores[1].replace(/\r/g, "");
+        const valores = linhas[0].split(",");
+        let quantidade = parseInt(valores[1].replace(/\r/g, ""), 10);
+
         document.getElementById("quantidade").innerText = quantidade;
+
+        const numeroElem = document.getElementById("quantidade");
+        if (quantidade <= 100) {
+          numeroElem.style.color = "var(--vermelho)";
+        } else if (quantidade <= 300) {
+          numeroElem.style.color = "var(--amarelo)";
+        } else {
+          numeroElem.style.color = "var(--verde)";
+        }
+
       } catch (erro) {
         document.getElementById("quantidade").innerText = "Erro ao carregar";
         console.error("Erro ao carregar CSV:", erro);
@@ -86,3 +182,5 @@
   </script>
 </body>
 </html>
+
+
