--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Reciclagem de Latinhas - SENAI</title>
+  <title>Reciclagem de Latinhas - SENAI CIVIT I</title>
   <style>
     :root {
       --azul-senai: #0072bc;
