--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Reciclagem de Latinhas - SENAI CIVIT I</title>
   <style>
     :root {
-      --azul-senai: #0072bc;
+      --azul-senai: #014069;
       --amarelo: #ffe600;
       --vermelho: #e63946;
       --verde: #1ab248;
-      --fundo-claro: #f5f5f5;
+      --fundo-claro: #bbbbbb;
     }
 
     body {
@@ -122,8 +122,8 @@
   </style>
 </head>
 <body>
-  <h1>Projeto Reciclagem de Latinhas - SENAI</h1>
-  <div id="descricao">Quantidade de latinhas arrecadadas:</div>
+  <h1>Projeto Reciclagem de Latinhas - SENAI CIVIT I</h1>
+  <div id="descricao">Latinhas Arrecadadas:</div>
   <div id="quantidade">Carregando...</div>
 
   <div id="indicadores">
