--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       font-weight: bold;
       margin-bottom: 1rem;
       text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+      transition: color 0.3s ease;
     }
 
     #info-atualizacao {
@@ -151,42 +152,43 @@
   </div>
 
   <script>
-  async function carregarQuantidade() {
-    try {
-      const url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRxUhwhNg1vw0pCTgym2Oo_5BzF_2vjOcHV--TbmY24_fjKq1Egyu2CN92V8Bo-P7ug-VmTGNPLY5N3/pub?output=csv&t=" + new Date().getTime();
-      const resposta = await fetch(url, { cache: "no-store" });
-      const texto = await resposta.text();
+    async function carregarQuantidade() {
+      try {
+        const url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRxUhwhNg1vw0pCTgym2Oo_5BzF_2vjOcHV--TbmY24_fjKq1Egyu2CN92V8Bo-P7ug-VmTGNPLY5N3/pub?output=csv&t=" + new Date().getTime();
+        const resposta = await fetch(url, { cache: "no-store" });
+        const texto = await resposta.text();
+        const linhas = texto.trim().split("\n");
 
-      const linhas = texto.trim().split("\n");
+        // Detecta se há cabeçalho
+        const temCabecalho = linhas[0].toLowerCase().includes("quantidade");
+        const linhaDados = temCabecalho ? linhas[1] : linhas[0];
 
-      if (linhas.length < 2) throw new Error("CSV sem dados");
+        const valores = linhaDados.split(",");
+        const quantidade = parseInt(valores[1].replace(/\r/g, ""), 10);
 
-      const valores = linhas[1].split(",");
-      const quantidade = parseInt(valores[1].replace(/\r/g, ""), 10);
+        const numeroElem = document.getElementById("quantidade");
+        numeroElem.innerText = quantidade;
 
-      const numeroElem = document.getElementById("quantidade");
-      numeroElem.innerText = quantidade;
+        if (quantidade <= 100) {
+          numeroElem.style.color = "var(--vermelho)";
+        } else if (quantidade <= 300) {
+          numeroElem.style.color = "var(--amarelo)";
+        } else {
+          numeroElem.style.color = "var(--verde)";
+        }
 
-      if (quantidade <= 100) {
-        numeroElem.style.color = "var(--vermelho)";
-      } else if (quantidade <= 300) {
-        numeroElem.style.color = "var(--amarelo)";
-      } else {
-        numeroElem.style.color = "var(--verde)";
+      } catch (erro) {
+        console.error("Erro ao carregar CSV:", erro);
+        document.getElementById("quantidade").innerText = "Erro ao carregar";
       }
-
-    } catch (erro) {
-      console.error("Erro ao carregar CSV:", erro);
-      document.getElementById("quantidade").innerText = "Erro ao carregar";
     }
-  }
 
-  carregarQuantidade();
-  setInterval(carregarQuantidade, 30000);
-</script>
-
+    carregarQuantidade();
+    setInterval(carregarQuantidade, 30000);
+  </script>
 </body>
 </html>
+
 
 
 
