--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Reciclagem de Latinhas - SENAI</title>
   <style>
     :root {
-      --azul-senai: #0072bc;
+      --azul-senai: #004a7a;
       --amarelo: #ffe600;
       --vermelho: #e63946;
       --verde: #1ab248;
-      --fundo-claro: #f5f5f5;
+      --fundo-claro: #a5a5a5;
     }
 
     body {
