--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
       #info-atualizacao, #aviso-cache {
         max-width: 90%;
       }
+      #indicadores {
+        gap: 2.5rem; /* Espaçamento maior entre os quadrados no celular */
+      }
     }
   </style>
 </head>
