--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
   </style>
 </head>
 <body>
-  <h1>Projeto Reciclagem de Latinhas - SENAI</h1>
-  <div id="descricao">Quantidade de latinhas arrecadadas:</div>
+  <h1>Projeto Reciclagem de Latinhas - SENAI CIVIT I</h1>
+  <div id="descricao">Latinhas Arrecadadas:</div>
   <div id="quantidade">Carregando...</div>
 
   <div id="indicadores">
