--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     :root {
       --azul-senai: #004a7a;
-      --amarelo: #e28902;
+      --amarelo: #e6ff08;
       --vermelho: #e63946;
       --verde: #1ab248;
       --fundo-claro: #a5a5a5;
