--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
   </style>
 </head>
 <body>
-  <h1>Projeto Reciclagem de Latinhas - SENAI</h1>
+  <h1>Reciclagem de Latinhas - SENAI CIVIT I</h1>
   <div id="barra-separadora"></div>
 
-  <div id="descricao">Quantidade de latinhas arrecadadas:</div>
+  <div id="descricao">Latinhas Arrecadadas:</div>
   <div id="quantidade">Carregando...</div>
 
   <div id="indicadores">
